syntax = "proto3";

package location;

service LocationService {
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse);
  rpc GetNearbyRiders(GetNearbyRidersRequest) returns (GetNearbyRidersResponse);
  rpc GetRiderLocation(GetRiderLocationRequest) returns (GetRiderLocationResponse);
}

message UpdateLocationRequest {
  string rider_id = 1;
  double latitude = 2;
  double longitude = 3;
}

message UpdateLocationResponse {
  bool success = 1;
}

message GetNearbyRidersRequest {
  double latitude = 1;
  double longitude = 2;
  double radius_km = 3;
  int32 limit = 4;
}

message RiderLocation {
  string rider_id = 1;
  double latitude = 2;
  double longitude = 3;
  double distance_km = 4;
}

message GetNearbyRidersResponse {
  repeated RiderLocation riders = 1;
}

message GetRiderLocationRequest {
  string rider_id = 1;
}

message GetRiderLocationResponse {
  string rider_id = 1;
  double latitude = 2;
  double longitude = 3;
  int64 updated_at = 4;
}
